--- a/2019 Portfolio/AboutMe.html
+++ b/2019 Portfolio/AboutMe.html
@@ -52,7 +52,7 @@
  </h5>
 </div>
   <div class="buttonPDF">
-    <a href="Kevin.Heaghney.pdf" class="resume" download>Resume</a>
+    <a href="Kev_Heaghney.pdf" class="resume" download>Resume</a>
   </div>
   <footer>
       <div class="footer">
