--- a/AboutMe.html
+++ b/AboutMe.html
@@ -42,7 +42,7 @@
  <hr class="hr"></hr>
   <h2> Front End Developer/Designer</h2>
 </header>
-<body style="margin:auto; width:600px;>
+<body>
 <div class="aboutMe">
   <h5>I started my journey 7 years ago in the technology field and I continue to perfect my craft everyday. My creativity, eagerness to learn and curiosity lead me into the field.<br><br>
 
