--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
   <div class="name1">
     <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
   </div>
- 
-  <h2 class="h21"> Front End Developer/Designer</h2>
+
   <br>
   <div>
       <a href="Kevin.Heaghney.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
@@ -85,17 +84,17 @@
     <img src="IMG_0328.jpg" alt="portrait" id="myImg">
   </div>
   <!--<div class="col-md-6 col-sm-12">
-      <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<br><a href="AboutMe.html">Read More</a></w3-text-black>
+      <w3-text-black>I started my journey 7 years ago in the technology field and I continue to perfect my craft everyday.<br><a href="AboutMe.html">Read More</a></w3-text-black>
   </div>-->
   <div class="col-md-6 col-sm-12" id="bio">
     <h3 class="nameBio">Kevin Heaghney</h3><br>
-    <p><strong>Front End Developer/Designer</strong></p><br>
-      <w3-text-black>I started my journey 4 years ago in Web Development/Design and I continue to perfect my craft everyday.
+ 
+      <w3-text-black>I started my journey 7 years ago in the technology field and I continue to perfect my craft everyday.
         <p class="readMmore" data-toggle="collapse" data-target="#demo"><i class="fa fa-level-down" id="arrow"></i><strong><br>Read More</strong></p></w3-text-black>
       <div id="demo" class="collapse">
-        After working Construction and blue collar jobs for many years, I realized I had more to offer. But, at the time didn't know what that was. Ultimately, my creativity, eagerness to learn and curiosity lead me into the Web Development/Design technology field.<br><br>
+       My creativity, eagerness to learn and curiosity lead me into the field.<br><br>
 
-        I've invested everything I have into learning and developing my skills. And, it was the greatest decision I've ever made, and has allowed me to find my true passion. I've completed courses through W3Schools and Udacity, where I received my Front End Development Nanodegree. I have working experience creating eCommerce Bookstores for a number of Colleges and Universities, an eCommerce site for a startup toffee company and front end web design.<br><br>
+         I've invested everything I have into learning and developing my skills. Which has been the greatest decision I've ever made, and has allowed me to find my true passion. I've completed courses through W3Schools and Udacity, where I received my Front End Development Nanodegree. I have working experience creating eCommerce Bookstores for a number of Colleges and Universities, an eCommerce site for a startup toffee company and front end web design. Currently, I'm the Manager of Media Distribution at a Digital Marketing Firm for the Automotive Industry.<br><br>
         
         My journey is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the journey I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
       </div>
@@ -112,17 +111,13 @@
     <li>CSS</li>
     <li>Bootstrap</li>
     <li>JavaScript</li>
-    <li>PHP</li>
     <li>CMS</li>
-    <li>Wordpress</li>
-    <li>DNN</li>
-    <li>Squarespace</li>
+     <li>Web Development</li>
   </ul>
 </div>
   <div class="col-md-3 col-sm-6 col-xs-6">
     <ul class="skillList">
-    <li>Photoshop</li>
-    <li>Filezilla (FTP)</li>
+    <li>Web Design</li>
     <li>Responsive Design</li>
     <li>DevTools</li>
     <li>UI/UX</li>
@@ -140,8 +135,7 @@
     <div class="footer">
       <div class="col-md-4 col-xs-6">
         <p class="nameTitle">
-          Kevin Heaghney<br>
-          Front End Developer/Designer
+          Kevin Heaghney
         </p>
       </div>
       <div class="col-md-4 col-xs-12">
