--- a/AboutMe.html
+++ b/AboutMe.html
@@ -58,8 +58,7 @@
       <div class="footer">
         <div class="col-md-4 col-xs-6">
           <p class="nameTitle">
-            Kevin Heaghney<br>
-            Front End Developer/Designer
+            Kevin Heaghney
           </p>
         </div>
          <div class="col-md-4 col-xs-12">
