--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -51,7 +51,7 @@
   </div>
   <div class="col-md-6 col-sm-12 col-xs-12">
       <span class="glyphicon glyphicon-envelope" id="spanIcon">
-          <a href="mailto:kheaghney1@gmail.com">Email</a> 
+          <a href="mailto:kheaghney1@gmail.com">kheaghney1@gmail.com</a> 
         </span>
     </div>
 </div>
