--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <br>
   <div>
-      <a href="Kevin.Heaghney.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
+      <a href="Kev_Heaghney.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
   </div>
   <div class="popup" onclick="myFunction()"><p class="connect">Contact</p>
       <span class="popuptext" id="myPopup">CONTACT:<br>314.578.9129<br><a href="mailto:kheaghney1@gmail.com">Email</a></span>
