--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <a href="Kev_Heaghney.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
   </div>
   <div class="popup" onclick="myFunction()"><p class="connect">Contact</p>
-      <span class="popuptext" id="myPopup">CONTACT:<br>314.578.9129<br><a href="mailto:kheaghney1@gmail.com">kheaghney1@gmail.com</a></span>
+      <span class="popuptext" id="myPopup" style="font-size:14px;">CONTACT:<br>314.578.9129<br><a href="mailto:kheaghney1@gmail.com">kheaghney1@gmail.com</a></span>
     </div>
   
 </div>
