--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
     <li>Bootstrap</li>
     <li>JavaScript</li>
     <li>CMS</li>
-     <li>Web Development</li>
+    <li>Web Development</li>
+    <li>Digital Marketing</li>
   </ul>
 </div>
   <div class="col-md-3 col-sm-6 col-xs-6">
