--- a/AboutMe.html
+++ b/AboutMe.html
@@ -48,7 +48,7 @@
 
     I've invested everything I have into learning and developing my skills. Which has been the greatest decision I've ever made, and has allowed me to find my true passion. I've completed courses through W3Schools and Udacity, where I received my Front End Development Nanodegree. I have working experience creating eCommerce Bookstores for a number of Colleges and Universities, an eCommerce site for a startup toffee company and front end web design. Currently, I'm the Manager of Media Distribution at a Digital Marketing Firm for the Automotive Industry.<br><br>
     
-    My journey is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the journey I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
+    My development is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the path I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
  </h5>
 </div>
   <div class="buttonPDF">
