--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <div class="container01" style="max-width:1000px;">
 <div class="col-md-6 col-md-12" id="skills" style="text-align:left;">
   <h3 class="skill" style="text-align:left">Skills</h3><hr class="hr02"><br> 
-  <w3-text-black>Everyday I push myself to do more, here are some of my current skills.  </w3-text-black>
+  <w3-text-black>Constantly expanding my horizon, here are some of my current skills. </w3-text-black>
 </div>
 <div class="col-md-3 col-sm-6 col-xs-6">
   <ul class="skillList">
