--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>2019 Portfolio</title>
+  <title>2022 Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
@@ -36,29 +36,30 @@
   
 <header class="head">
   <div class="header__bg"></div>
-  <div class="name">
+ <br><br> <div class="name">
  <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
- </div>
+ </div><br><br>
  <hr class="hr"></hr>
-
 </header>
 <body>
 <div class="aboutMe">
-  <h5>I started my journey 7 years ago in the technology field and I continue to perfect my craft everyday. My creativity, eagerness to learn and curiosity lead me into the field.<br><br>
+  <h5>I started my journey 6 years ago in Web Development/Design and I continue to perfect my craft everyday.
 
-    I've invested everything I have into learning and developing my skills. Which has been the greatest decision I've ever made, and has allowed me to find my true passion. I've completed courses through W3Schools and Udacity, where I received my Front End Development Nanodegree. I have working experience creating eCommerce Bookstores for a number of Colleges and Universities, an eCommerce site for a startup toffee company and front end web design. Currently, I'm the Manager of Media Distribution at a Digital Marketing Firm for the Automotive Industry.<br><br>
+    My professional experience and education have given me a solid base, upon which I hope to further develop my expertise. I have working knowledge using a number of different CMS platforms, developing/designing websites, emails, and custom templates. Also, utilizing responsive design, graphic design, ESPs, and analyzing any and all data collected.
+
     
-    My development is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the path I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
+    My journey is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the journey I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
  </h5>
 </div>
   <div class="buttonPDF">
-    <a href="Kev_Heaghney.pdf" class="resume" download>Resume</a>
+    <a href="Kevin.Heaghney.pdf" class="resume" download>Resume</a>
   </div>
   <footer>
       <div class="footer">
         <div class="col-md-4 col-xs-6">
           <p class="nameTitle">
-            Kevin Heaghney
+            Kevin Heaghney<br>
+           Developer/Designer
           </p>
         </div>
          <div class="col-md-4 col-xs-12">
