--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>2019 Portfolio</title>
+  <title>2022 Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -41,13 +41,14 @@
   <div class="name1">
     <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
   </div>
+ 
 
-  <br>
+ 
   <div>
-      <a href="Kev_Heaghney.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
+      <a href="Kevin.Heaghney.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
   </div>
   <div class="popup" onclick="myFunction()"><p class="connect">Contact</p>
-      <span class="popuptext" id="myPopup" style="font-size:14px;">CONTACT:<br>314.578.9129<br><a href="mailto:kheaghney1@gmail.com">kheaghney1@gmail.com</a></span>
+      <span class="popuptext" id="myPopup">CONTACT:<br>314.578.9129<br><a href="mailto:kheaghney1@gmail.com">Email</a></span>
     </div>
   
 </div>
@@ -63,8 +64,8 @@
   <div class="container" style="max-width:1000px;">
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github" style="padding:30px">   
-    <h3 class="proj" style="text-align:left">Projects</h3>
-    <w3-text-black>Most of the projects I have made are uploaded on Github. If you would like to view the source code, please visit the Github link below. </w3-text-black><br>
+    <h3 class="proj" style="text-align:left">Projects/Websites</h3>
+    <w3-text-black>Some projects I have made are uploaded on Github. If you would like to view the source code, please visit the GitHub link below. But, here are a few links to some of the websites I have designed and/or helped build for your veiwing pleasure. <br> http://www.centurycollegebookstore.com/home<br> https://www.cryptopoutine.org/<br>https://www.pinemttoffeeco.com/  </w3-text-black><br>
     <a href="https://github.com/kheaghney"><img src="githubLogo1.png" style="width:90px;"></a> 
   </div>
   </section>
@@ -84,26 +85,25 @@
     <img src="IMG_0328.jpg" alt="portrait" id="myImg">
   </div>
   <!--<div class="col-md-6 col-sm-12">
-      <w3-text-black>I started my journey 7 years ago in the technology field and I continue to perfect my craft everyday.<br><a href="AboutMe.html">Read More</a></w3-text-black>
+      <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<br><a href="AboutMe.html">Read More</a></w3-text-black>
   </div>-->
   <div class="col-md-6 col-sm-12" id="bio">
     <h3 class="nameBio">Kevin Heaghney</h3><br>
- 
-      <w3-text-black>I started my journey 7 years ago in the technology field and I continue to perfect my craft everyday.
+  
+      <w3-text-black>I started my journey 6 years ago in Web Development/Design and I continue to perfect my craft everyday.
         <p class="readMmore" data-toggle="collapse" data-target="#demo"><i class="fa fa-level-down" id="arrow"></i><strong><br>Read More</strong></p></w3-text-black>
       <div id="demo" class="collapse">
-       My creativity, eagerness to learn and curiosity lead me into the field.<br><br>
-
-         I've invested everything I have into learning and developing my skills. Which has been the greatest decision I've ever made, and has allowed me to find my true passion. I've completed courses through W3Schools and Udacity, where I received my Front End Development Nanodegree. I have working experience creating eCommerce Bookstores for a number of Colleges and Universities, an eCommerce site for a startup toffee company and front end web design. Currently, I'm the Manager of Media Distribution at a Digital Marketing Firm for the Automotive Industry.<br><br>
+        My professional experience and education have given me a solid base, upon which I hope to further develop my expertise. I have working knowledge using a number of different CMS platforms, developing/designing websites, emails, and custom templates. Also, utilizing responsive design, graphic design, ESPs, and analyzing any and all data collected.
+        <br><br>
         
-        My development is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the path I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
+        My journey is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the journey I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
       </div>
   </div>
 </div>
 <div class="container01" style="max-width:1000px;">
 <div class="col-md-6 col-md-12" id="skills" style="text-align:left;">
   <h3 class="skill" style="text-align:left">Skills</h3><hr class="hr02"><br> 
-  <w3-text-black>Constantly expanding my horizon, here are some of my current skills. </w3-text-black>
+  <w3-text-black>Everyday I push myself to do more, here are some of my current skills.  </w3-text-black>
 </div>
 <div class="col-md-3 col-sm-6 col-xs-6">
   <ul class="skillList">
@@ -112,13 +112,15 @@
     <li>Bootstrap</li>
     <li>JavaScript</li>
     <li>CMS</li>
-    <li>Web Development</li>
+    <li>Wordpress</li>
+    <li>GIMP</li>
     <li>Digital Marketing</li>
   </ul>
 </div>
   <div class="col-md-3 col-sm-6 col-xs-6">
     <ul class="skillList">
-    <li>Web Design</li>
+    <li>Photoshop</li>
+    <li>Filezilla (FTP)</li>
     <li>Responsive Design</li>
     <li>DevTools</li>
     <li>UI/UX</li>
@@ -136,7 +138,8 @@
     <div class="footer">
       <div class="col-md-4 col-xs-6">
         <p class="nameTitle">
-          Kevin Heaghney
+          Kevin Heaghney<br>
+         Developer/Designer
         </p>
       </div>
       <div class="col-md-4 col-xs-12">
