--- a/2019 Portfolio/index.html
+++ b/2019 Portfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>2019 Portfolio</title>
+  <title>2022 Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -42,8 +42,8 @@
     <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
   </div>
  
-  <h2 class="h21"> Front End Developer/Designer</h2>
-  <br>
+
+ 
   <div>
       <a href="Kevin.Heaghney.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
   </div>
@@ -64,8 +64,8 @@
   <div class="container" style="max-width:1000px;">
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github" style="padding:30px">   
-    <h3 class="proj" style="text-align:left">Projects</h3>
-    <w3-text-black>Most of the projects I have made are uploaded on Github. If you would like to view the source code, please visit the Github link below. </w3-text-black><br>
+    <h3 class="proj" style="text-align:left">Projects/Websites</h3>
+    <w3-text-black>Some projects I have made are uploaded on Github. If you would like to view the source code, please visit the GitHub link below. But, here are a few links to some of the websites I have designed and/or helped build for your veiwing pleasure. <br> http://www.centurycollegebookstore.com/home<br> https://www.cryptopoutine.org/<br>https://www.pinemttoffeeco.com/  </w3-text-black><br>
     <a href="https://github.com/kheaghney"><img src="githubLogo1.png" style="width:90px;"></a> 
   </div>
   </section>
@@ -89,13 +89,12 @@
   </div>-->
   <div class="col-md-6 col-sm-12" id="bio">
     <h3 class="nameBio">Kevin Heaghney</h3><br>
-    <p><strong>Front End Developer/Designer</strong></p><br>
-      <w3-text-black>I started my journey 4 years ago in Web Development/Design and I continue to perfect my craft everyday.
+  
+      <w3-text-black>I started my journey 6 years ago in Web Development/Design and I continue to perfect my craft everyday.
         <p class="readMmore" data-toggle="collapse" data-target="#demo"><i class="fa fa-level-down" id="arrow"></i><strong><br>Read More</strong></p></w3-text-black>
       <div id="demo" class="collapse">
-        After working Construction and blue collar jobs for many years, I realized I had more to offer. But, at the time didn't know what that was. Ultimately, my creativity, eagerness to learn and curiosity lead me into the Web Development/Design technology field.<br><br>
-
-        I've invested everything I have into learning and developing my skills. And, it was the greatest decision I've ever made, and has allowed me to find my true passion. I've completed courses through W3Schools and Udacity, where I received my Front End Development Nanodegree. I have working experience creating eCommerce Bookstores for a number of Colleges and Universities, an eCommerce site for a startup toffee company and front end web design.<br><br>
+        My professional experience and education have given me a solid base, upon which I hope to further develop my expertise. I have working knowledge using a number of different CMS platforms, developing/designing websites, emails, and custom templates. Also, utilizing responsive design, graphic design, ESPs, and analyzing any and all data collected.
+        <br><br>
         
         My journey is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the journey I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
       </div>
@@ -112,11 +111,10 @@
     <li>CSS</li>
     <li>Bootstrap</li>
     <li>JavaScript</li>
-    <li>PHP</li>
     <li>CMS</li>
     <li>Wordpress</li>
-    <li>DNN</li>
-    <li>Squarespace</li>
+    <li>GIMP</li>
+    <li>Digital Marketing</li>
   </ul>
 </div>
   <div class="col-md-3 col-sm-6 col-xs-6">
@@ -141,7 +139,7 @@
       <div class="col-md-4 col-xs-6">
         <p class="nameTitle">
           Kevin Heaghney<br>
-          Front End Developer/Designer
+         Developer/Designer
         </p>
       </div>
       <div class="col-md-4 col-xs-12">
