--- a/2019 Portfolio/ContactInfo.html
+++ b/2019 Portfolio/ContactInfo.html
@@ -40,7 +40,7 @@
  <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
  </div>
  <hr class="hr"></hr>
-  <h2> Front End Developer/Designer</h2>
+  <h2>Developer/Designer</h2>
   <div class="contact">
     <h2 class="contactHead">Reach Out</h2>
     <hr class="hr01">
@@ -63,7 +63,7 @@
         <div class="col-md-4 col-xs-6">
           <p class="nameTitle">
             Kevin Heaghney<br>
-            Front End Developer/Designer
+            Developer/Designer
           </p>
         </div>
          <div class="col-md-4 col-xs-12">
