--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github" style="padding:30px">   
     <h3 class="proj" style="text-align:left">Projects/Websites</h3>
-    <w3-text-black>Some projects I have made are uploaded on Github. If you would like to view the source code, please visit the GitHub link below. But, here are a few links to some of the websites I have designed and/or helped build for your veiwing pleasure. <br> http://www.centurycollegebookstore.com/home<br> https://www.cryptopoutine.org/<br>https://www.pinemttoffeeco.com/  </w3-text-black><br>
+    <w3-text-black>Some projects I have made are uploaded on Github. If you would like to view the source code, please visit the GitHub link below. But, here are a few links to some of the websites I have designed and/or helped build for your veiwing pleasure. <br> <a href="http://www.centurycollegebookstore.com/home"></a><br><a href=" https://www.cryptopoutine.org/"></a><br><a href="https://www.pinemttoffeeco.com/"></a> </w3-text-black><br>
     <a href="https://github.com/kheaghney"><img src="githubLogo1.png" style="width:90px;"></a> 
   </div>
   </section>
@@ -96,7 +96,7 @@
         My professional experience and education have given me a solid base, upon which I hope to further develop my expertise. I have working knowledge using a number of different CMS platforms, developing/designing websites, emails, and custom templates. Also, utilizing responsive design, graphic design, ESPs, and analyzing any and all data collected.
         <br><br>
         
-        My journey is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the journey I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
+        My journey is ongoing. But, I hope to find a position I can use my talent and continue my professional growth. What sets me apart is the journey I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
       </div>
   </div>
 </div>
