--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github" style="padding:30px">   
     <h3 class="proj" style="text-align:left">Projects/Websites</h3>
-    <w3-text-black>Some projects I have made are uploaded on Github. If you would like to view the source code, please visit the GitHub link below. But, here are a few links to some of the websites I have designed and/or helped build for your veiwing pleasure. <br> <a href="http://www.centurycollegebookstore.com/home">www.centurycollegebookstore.com</a><br><a href=" https://www.cryptopoutine.org/">www.cryptopoutine.org</a><br><a href="https://www.pinemttoffeeco.com/">www.pinemttoffeeco.com</a> </w3-text-black><br>
+    <w3-text-black>Some projects I have made are uploaded on Github. If you would like to view the source code, please visit the GitHub link below. But, here are a few links to some of the websites I have designed and/or helped build for your veiwing pleasure.<br><br> <a href="http://www.centurycollegebookstore.com/home">www.centurycollegebookstore.com</a><br><a href=" https://www.cryptopoutine.org/">www.cryptopoutine.org</a><br><a href="https://www.pinemttoffeeco.com/">www.pinemttoffeeco.com</a> </w3-text-black><br>
     <a href="https://github.com/kheaghney"><img src="githubLogo1.png" style="width:90px;"></a> 
   </div>
   </section>
