--- a/AboutMe.html
+++ b/AboutMe.html
@@ -48,11 +48,11 @@
     My professional experience and education have given me a solid base, upon which I hope to further develop my expertise. I have working knowledge using a number of different CMS platforms, developing/designing websites, emails, and custom templates. Also, utilizing responsive design, graphic design, ESPs, and analyzing any and all data collected.
 
     
-    My journey is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the journey I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
+    My journey is ongoing. But, I hope to find a position I can use my talent and continue my professional growth. What sets me apart is the journey I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
  </h5>
 </div>
   <div class="buttonPDF">
-    <a href="Kevin.Heaghney.pdf" class="resume" download>Resume</a>
+    <a href="Kevin.Heaghney_Resume_2022.pdf" class="resume" download>Resume</a>
   </div>
   <footer>
       <div class="footer">
