--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>2019 Portfolio</title>
+  <title>2022 Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
@@ -40,7 +40,7 @@
  <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
  </div>
  <hr class="hr"></hr>
-
+  <h2>Developer/Designer</h2>
   <div class="contact">
     <h2 class="contactHead">Reach Out</h2>
     <hr class="hr01">
@@ -51,7 +51,7 @@
   </div>
   <div class="col-md-6 col-sm-12 col-xs-12">
       <span class="glyphicon glyphicon-envelope" id="spanIcon">
-          <a href="mailto:kheaghney1@gmail.com">kheaghney1@gmail.com</a> 
+          <a href="mailto:kheaghney1@gmail.com">Email</a> 
         </span>
     </div>
 </div>
@@ -62,7 +62,8 @@
       <div class="footer">
         <div class="col-md-4 col-xs-6">
           <p class="nameTitle">
-            Kevin Heaghney
+            Kevin Heaghney<br>
+            Developer/Designer
           </p>
         </div>
          <div class="col-md-4 col-xs-12">
